code_bison.output
Terminals unused in grammar

    TOKEN_COMMENT
    TOKEN_WHITESPACE


State 14 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TOKEN_CLASS TOKEN_PROGRAMCLASS TOKEN_LCB decl TOKEN_RCB

    2 decl: field_decl decl
    3     | decl_method

    4 decl_method: decl_method method_decl
    5            | method_decl

    6 field_decl: type id multi_field TOKEN_SEMICOLON

    7 multi_field: TOKEN_COMMA id multi_field
    8            | TOKEN_LB int_literal TOKEN_RB TOKEN_COMMA id multi_field
    9            | TOKEN_LB int_literal TOKEN_RB
   10            | %empty

   11 method_decl: header func_name TOKEN_LP func_args TOKEN_RP block

   12 header: TOKEN_VOIDTYPE
   13       | type

   14 func_name: id
   15          | TOKEN_MAINFUNC

   16 func_args: arg
   17          | arg TOKEN_COMMA arg
   18          | arg TOKEN_COMMA arg TOKEN_COMMA arg
   19          | arg TOKEN_COMMA arg TOKEN_COMMA arg TOKEN_COMMA arg
   20          | %empty

   21 arg: type id

   22 block: TOKEN_LCB var_decl statement TOKEN_RCB

   23 var_decl: type multi_id TOKEN_SEMICOLON
   24         | %empty

   25 statement: location assign_op expr TOKEN_SEMICOLON
   26          | method_call TOKEN_SEMICOLON
   27          | TOKEN_IFCONDITION TOKEN_RP expr TOKEN_LP else_stmt
   28          | TOKEN_LOOP id TOKEN_ASSIGNOP_ASS expr TOKEN_COMMA expr block
   29          | TOKEN_RETURN ret_stmt TOKEN_SEMICOLON
   30          | TOKEN_BREAKSTMT TOKEN_SEMICOLON
   31          | TOKEN_CONTINUESTMT TOKEN_SEMICOLON
   32          | block
   33          | %empty

   34 ret_stmt: expr
   35         | %empty

   36 else_stmt: TOKEN_ELSECONDITION block
   37          | %empty

   38 location: id
   39         | id TOKEN_LB expr TOKEN_RB

   40 assign_op: TOKEN_ASSIGNOP_ASS
   41          | TOKEN_ASSIGNOP_ADD
   42          | TOKEN_ASSIGNOP_SUB

   43 expr: location
   44     | method_call
   45     | literal
   46     | expr TOKEN_ARITHMATICOP_ADD expr
   47     | expr TOKEN_ARITHMATICOP_SUB expr
   48     | expr TOKEN_ARITHMATICOP_MUL expr
   49     | expr TOKEN_ARITHMATICOP_DIV expr
   50     | expr TOKEN_ARITHMATICOP_REM expr
   51     | expr TOKEN_RELATIONOP_SE expr
   52     | expr TOKEN_RELATIONOP_S expr
   53     | expr TOKEN_RELATIONOP_B expr
   54     | expr TOKEN_RELATIONOP_BE expr
   55     | expr TOKEN_EQUALITYOP_E expr
   56     | expr TOKEN_EQUALITYOP_NE expr
   57     | expr TOKEN_CONDITIONOP_AND expr
   58     | expr TOKEN_CONDITIONOP_OR expr
   59     | TOKEN_ARITHMATICOP_SUB expr
   60     | TOKEN_LOGICOP expr
   61     | TOKEN_LP expr TOKEN_RP

   62 method_call: id TOKEN_LP multi_expr TOKEN_RP
   63            | TOKEN_CALLOUT TOKEN_LP string_literal multi_callout_args TOKEN_RP

   64 multi_expr: multi_expr_inner
   65           | %empty

   66 multi_expr_inner: expr
   67                 | expr TOKEN_COMMA multi_expr_inner

   68 multi_callout_args: TOKEN_COMMA multi_callout_args_inner
   69                   | %empty

   70 multi_callout_args_inner: callout_args
   71                         | callout_args TOKEN_COMMA multi_callout_args_inner

   72 callout_args: expr
   73             | string_literal

   74 type: TOKEN_INTTYPE
   75     | TOKEN_BOOLEANTYPE

   76 multi_id: id
   77         | id TOKEN_COMMA multi_id

   78 literal: int_literal
   79        | char_literal
   80        | bool_literal

   81 int_literal: decimal_literal
   82            | hex_literal

   83 id: TOKEN_ID

   84 decimal_literal: TOKEN_DECIMALCONST

   85 hex_literal: TOKEN_HEXADECIMALCONST

   86 bool_literal: TOKEN_BOOLEANCONST

   87 char_literal: TOKEN_CHARCONST

   88 string_literal: TOKEN_STRINGCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_CLASS <str> (258) 1
    TOKEN_PROGRAMCLASS <str> (259) 1
    TOKEN_ID <str> (260) 83
    TOKEN_INTTYPE <str> (261) 74
    TOKEN_BOOLEANTYPE <str> (262) 75
    TOKEN_VOIDTYPE <str> (263) 12
    TOKEN_MAINFUNC <str> (264) 15
    TOKEN_LP <str> (265) 11 27 61 62 63
    TOKEN_RP <str> (266) 11 27 61 62 63
    TOKEN_COMMA <str> (267) 7 8 17 18 19 28 67 68 71 77
    TOKEN_SEMICOLON <str> (268) 6 23 25 26 29 30 31
    TOKEN_IFCONDITION <str> (269) 27
    TOKEN_LOOP <str> (270) 28
    TOKEN_ASSIGNOP_ASS <str> (271) 28 40
    TOKEN_ASSIGNOP_ADD <str> (272) 41
    TOKEN_ASSIGNOP_SUB <str> (273) 42
    TOKEN_RETURN <str> (274) 29
    TOKEN_BREAKSTMT <str> (275) 30
    TOKEN_CONTINUESTMT <str> (276) 31
    TOKEN_LB <str> (277) 8 9 39
    TOKEN_RB <str> (278) 8 9 39
    TOKEN_LCB <str> (279) 1 22
    TOKEN_RCB <str> (280) 1 22
    TOKEN_CALLOUT <str> (281) 63
    TOKEN_ELSECONDITION <str> (282) 36
    TOKEN_ARITHMATICOP_ADD <str> (283) 46
    TOKEN_ARITHMATICOP_SUB <str> (284) 47 59
    TOKEN_ARITHMATICOP_DIV <str> (285) 49
    TOKEN_ARITHMATICOP_MUL <str> (286) 48
    TOKEN_ARITHMATICOP_REM <str> (287) 50
    TOKEN_RELATIONOP_SE <str> (288) 51
    TOKEN_RELATIONOP_S <str> (289) 52
    TOKEN_RELATIONOP_BE <str> (290) 54
    TOKEN_RELATIONOP_B <str> (291) 53
    TOKEN_EQUALITYOP_E <str> (292) 55
    TOKEN_EQUALITYOP_NE <str> (293) 56
    TOKEN_CONDITIONOP_AND <str> (294) 57
    TOKEN_CONDITIONOP_OR <str> (295) 58
    TOKEN_LOGICOP <str> (296) 60
    TOKEN_DECIMALCONST <str> (297) 84
    TOKEN_HEXADECIMALCONST <str> (298) 85
    TOKEN_BOOLEANCONST <str> (299) 86
    TOKEN_CHARCONST <str> (300) 87
    TOKEN_STRINGCONST <str> (301) 88
    TOKEN_COMMENT <str> (302)
    TOKEN_WHITESPACE <str> (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program <str> (50)
        on left: 1
        on right: 0
    decl <str> (51)
        on left: 2 3
        on right: 1 2
    decl_method (52)
        on left: 4 5
        on right: 3 4
    field_decl <str> (53)
        on left: 6
        on right: 2
    multi_field <str> (54)
        on left: 7 8 9 10
        on right: 6 7 8
    method_decl <str> (55)
        on left: 11
        on right: 4 5
    header <str> (56)
        on left: 12 13
        on right: 11
    func_name <str> (57)
        on left: 14 15
        on right: 11
    func_args <str> (58)
        on left: 16 17 18 19 20
        on right: 11
    arg <str> (59)
        on left: 21
        on right: 16 17 18 19
    block <str> (60)
        on left: 22
        on right: 11 28 32 36
    var_decl <str> (61)
        on left: 23 24
        on right: 22
    statement <str> (62)
        on left: 25 26 27 28 29 30 31 32 33
        on right: 22
    ret_stmt <str> (63)
        on left: 34 35
        on right: 29
    else_stmt <str> (64)
        on left: 36 37
        on right: 27
    location <str> (65)
        on left: 38 39
        on right: 25 43
    assign_op <str> (66)
        on left: 40 41 42
        on right: 25
    expr <str> (67)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 25 27 28 34 39 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 66 67 72
    method_call <str> (68)
        on left: 62 63
        on right: 26 44
    multi_expr <str> (69)
        on left: 64 65
        on right: 62
    multi_expr_inner <str> (70)
        on left: 66 67
        on right: 64 67
    multi_callout_args <str> (71)
        on left: 68 69
        on right: 63
    multi_callout_args_inner <str> (72)
        on left: 70 71
        on right: 68 71
    callout_args <str> (73)
        on left: 72 73
        on right: 70 71
    type <str> (74)
        on left: 74 75
        on right: 6 13 21 23
    multi_id <str> (75)
        on left: 76 77
        on right: 23 77
    literal <str> (76)
        on left: 78 79 80
        on right: 45
    int_literal <str> (77)
        on left: 81 82
        on right: 8 9 78
    id <str> (78)
        on left: 83
        on right: 6 7 8 14 21 28 38 39 62 76 77
    decimal_literal <str> (79)
        on left: 84
        on right: 81
    hex_literal <str> (80)
        on left: 85
        on right: 82
    bool_literal <str> (81)
        on left: 86
        on right: 80
    char_literal <str> (82)
        on left: 87
        on right: 79
    string_literal <str> (83)
        on left: 88
        on right: 63 73


State 0

    0 $accept: . program $end

    TOKEN_CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: TOKEN_CLASS . TOKEN_PROGRAMCLASS TOKEN_LCB decl TOKEN_RCB

    TOKEN_PROGRAMCLASS  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: TOKEN_CLASS TOKEN_PROGRAMCLASS . TOKEN_LCB decl TOKEN_RCB

    TOKEN_LCB  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: TOKEN_CLASS TOKEN_PROGRAMCLASS TOKEN_LCB . decl TOKEN_RCB

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7
    TOKEN_VOIDTYPE     shift, and go to state 8

    decl         go to state 9
    decl_method  go to state 10
    field_decl   go to state 11
    method_decl  go to state 12
    header       go to state 13
    type         go to state 14


State 6

   74 type: TOKEN_INTTYPE .

    $default  reduce using rule 74 (type)


State 7

   75 type: TOKEN_BOOLEANTYPE .

    $default  reduce using rule 75 (type)


State 8

   12 header: TOKEN_VOIDTYPE .

    $default  reduce using rule 12 (header)


State 9

    1 program: TOKEN_CLASS TOKEN_PROGRAMCLASS TOKEN_LCB decl . TOKEN_RCB

    TOKEN_RCB  shift, and go to state 15


State 10

    3 decl: decl_method .
    4 decl_method: decl_method . method_decl

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7
    TOKEN_VOIDTYPE     shift, and go to state 8

    $default  reduce using rule 3 (decl)

    method_decl  go to state 16
    header       go to state 13
    type         go to state 17


State 11

    2 decl: field_decl . decl

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7
    TOKEN_VOIDTYPE     shift, and go to state 8

    decl         go to state 18
    decl_method  go to state 10
    field_decl   go to state 11
    method_decl  go to state 12
    header       go to state 13
    type         go to state 14


State 12

    5 decl_method: method_decl .

    $default  reduce using rule 5 (decl_method)


State 13

   11 method_decl: header . func_name TOKEN_LP func_args TOKEN_RP block

    TOKEN_ID        shift, and go to state 19
    TOKEN_MAINFUNC  shift, and go to state 20

    func_name  go to state 21
    id         go to state 22


State 14

    6 field_decl: type . id multi_field TOKEN_SEMICOLON
   13 header: type .

    TOKEN_ID  shift, and go to state 19

    TOKEN_ID  [reduce using rule 13 (header)]
    $default  reduce using rule 13 (header)

    id  go to state 23


State 15

    1 program: TOKEN_CLASS TOKEN_PROGRAMCLASS TOKEN_LCB decl TOKEN_RCB .

    $default  reduce using rule 1 (program)


State 16

    4 decl_method: decl_method method_decl .

    $default  reduce using rule 4 (decl_method)


State 17

   13 header: type .

    $default  reduce using rule 13 (header)


State 18

    2 decl: field_decl decl .

    $default  reduce using rule 2 (decl)


State 19

   83 id: TOKEN_ID .

    $default  reduce using rule 83 (id)


State 20

   15 func_name: TOKEN_MAINFUNC .

    $default  reduce using rule 15 (func_name)


State 21

   11 method_decl: header func_name . TOKEN_LP func_args TOKEN_RP block

    TOKEN_LP  shift, and go to state 24


State 22

   14 func_name: id .

    $default  reduce using rule 14 (func_name)


State 23

    6 field_decl: type id . multi_field TOKEN_SEMICOLON

    TOKEN_COMMA  shift, and go to state 25
    TOKEN_LB     shift, and go to state 26

    $default  reduce using rule 10 (multi_field)

    multi_field  go to state 27


State 24

   11 method_decl: header func_name TOKEN_LP . func_args TOKEN_RP block

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7

    $default  reduce using rule 20 (func_args)

    func_args  go to state 28
    arg        go to state 29
    type       go to state 30


State 25

    7 multi_field: TOKEN_COMMA . id multi_field

    TOKEN_ID  shift, and go to state 19

    id  go to state 31


State 26

    8 multi_field: TOKEN_LB . int_literal TOKEN_RB TOKEN_COMMA id multi_field
    9            | TOKEN_LB . int_literal TOKEN_RB

    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33

    int_literal      go to state 34
    decimal_literal  go to state 35
    hex_literal      go to state 36


State 27

    6 field_decl: type id multi_field . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 37


State 28

   11 method_decl: header func_name TOKEN_LP func_args . TOKEN_RP block

    TOKEN_RP  shift, and go to state 38


State 29

   16 func_args: arg .
   17          | arg . TOKEN_COMMA arg
   18          | arg . TOKEN_COMMA arg TOKEN_COMMA arg
   19          | arg . TOKEN_COMMA arg TOKEN_COMMA arg TOKEN_COMMA arg

    TOKEN_COMMA  shift, and go to state 39

    $default  reduce using rule 16 (func_args)


State 30

   21 arg: type . id

    TOKEN_ID  shift, and go to state 19

    id  go to state 40


State 31

    7 multi_field: TOKEN_COMMA id . multi_field

    TOKEN_COMMA  shift, and go to state 25
    TOKEN_LB     shift, and go to state 26

    $default  reduce using rule 10 (multi_field)

    multi_field  go to state 41


State 32

   84 decimal_literal: TOKEN_DECIMALCONST .

    $default  reduce using rule 84 (decimal_literal)


State 33

   85 hex_literal: TOKEN_HEXADECIMALCONST .

    $default  reduce using rule 85 (hex_literal)


State 34

    8 multi_field: TOKEN_LB int_literal . TOKEN_RB TOKEN_COMMA id multi_field
    9            | TOKEN_LB int_literal . TOKEN_RB

    TOKEN_RB  shift, and go to state 42


State 35

   81 int_literal: decimal_literal .

    $default  reduce using rule 81 (int_literal)


State 36

   82 int_literal: hex_literal .

    $default  reduce using rule 82 (int_literal)


State 37

    6 field_decl: type id multi_field TOKEN_SEMICOLON .

    $default  reduce using rule 6 (field_decl)


State 38

   11 method_decl: header func_name TOKEN_LP func_args TOKEN_RP . block

    TOKEN_LCB  shift, and go to state 43

    block  go to state 44


State 39

   17 func_args: arg TOKEN_COMMA . arg
   18          | arg TOKEN_COMMA . arg TOKEN_COMMA arg
   19          | arg TOKEN_COMMA . arg TOKEN_COMMA arg TOKEN_COMMA arg

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7

    arg   go to state 45
    type  go to state 30


State 40

   21 arg: type id .

    $default  reduce using rule 21 (arg)


State 41

    7 multi_field: TOKEN_COMMA id multi_field .

    $default  reduce using rule 7 (multi_field)


State 42

    8 multi_field: TOKEN_LB int_literal TOKEN_RB . TOKEN_COMMA id multi_field
    9            | TOKEN_LB int_literal TOKEN_RB .

    TOKEN_COMMA  shift, and go to state 46

    $default  reduce using rule 9 (multi_field)


State 43

   22 block: TOKEN_LCB . var_decl statement TOKEN_RCB

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7

    $default  reduce using rule 24 (var_decl)

    var_decl  go to state 47
    type      go to state 48


State 44

   11 method_decl: header func_name TOKEN_LP func_args TOKEN_RP block .

    $default  reduce using rule 11 (method_decl)


State 45

   17 func_args: arg TOKEN_COMMA arg .
   18          | arg TOKEN_COMMA arg . TOKEN_COMMA arg
   19          | arg TOKEN_COMMA arg . TOKEN_COMMA arg TOKEN_COMMA arg

    TOKEN_COMMA  shift, and go to state 49

    $default  reduce using rule 17 (func_args)


State 46

    8 multi_field: TOKEN_LB int_literal TOKEN_RB TOKEN_COMMA . id multi_field

    TOKEN_ID  shift, and go to state 19

    id  go to state 50


State 47

   22 block: TOKEN_LCB var_decl . statement TOKEN_RCB

    TOKEN_ID            shift, and go to state 19
    TOKEN_IFCONDITION   shift, and go to state 51
    TOKEN_LOOP          shift, and go to state 52
    TOKEN_RETURN        shift, and go to state 53
    TOKEN_BREAKSTMT     shift, and go to state 54
    TOKEN_CONTINUESTMT  shift, and go to state 55
    TOKEN_LCB           shift, and go to state 43
    TOKEN_CALLOUT       shift, and go to state 56

    $default  reduce using rule 33 (statement)

    block        go to state 57
    statement    go to state 58
    location     go to state 59
    method_call  go to state 60
    id           go to state 61


State 48

   23 var_decl: type . multi_id TOKEN_SEMICOLON

    TOKEN_ID  shift, and go to state 19

    multi_id  go to state 62
    id        go to state 63


State 49

   18 func_args: arg TOKEN_COMMA arg TOKEN_COMMA . arg
   19          | arg TOKEN_COMMA arg TOKEN_COMMA . arg TOKEN_COMMA arg

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7

    arg   go to state 64
    type  go to state 30


State 50

    8 multi_field: TOKEN_LB int_literal TOKEN_RB TOKEN_COMMA id . multi_field

    TOKEN_COMMA  shift, and go to state 25
    TOKEN_LB     shift, and go to state 26

    $default  reduce using rule 10 (multi_field)

    multi_field  go to state 65


State 51

   27 statement: TOKEN_IFCONDITION . TOKEN_RP expr TOKEN_LP else_stmt

    TOKEN_RP  shift, and go to state 66


State 52

   28 statement: TOKEN_LOOP . id TOKEN_ASSIGNOP_ASS expr TOKEN_COMMA expr block

    TOKEN_ID  shift, and go to state 19

    id  go to state 67


State 53

   29 statement: TOKEN_RETURN . ret_stmt TOKEN_SEMICOLON

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    $default  reduce using rule 35 (ret_stmt)

    ret_stmt         go to state 73
    location         go to state 74
    expr             go to state 75
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 54

   30 statement: TOKEN_BREAKSTMT . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 81


State 55

   31 statement: TOKEN_CONTINUESTMT . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 82


State 56

   63 method_call: TOKEN_CALLOUT . TOKEN_LP string_literal multi_callout_args TOKEN_RP

    TOKEN_LP  shift, and go to state 83


State 57

   32 statement: block .

    $default  reduce using rule 32 (statement)


State 58

   22 block: TOKEN_LCB var_decl statement . TOKEN_RCB

    TOKEN_RCB  shift, and go to state 84


State 59

   25 statement: location . assign_op expr TOKEN_SEMICOLON

    TOKEN_ASSIGNOP_ASS  shift, and go to state 85
    TOKEN_ASSIGNOP_ADD  shift, and go to state 86
    TOKEN_ASSIGNOP_SUB  shift, and go to state 87

    assign_op  go to state 88


State 60

   26 statement: method_call . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 89


State 61

   38 location: id .
   39         | id . TOKEN_LB expr TOKEN_RB
   62 method_call: id . TOKEN_LP multi_expr TOKEN_RP

    TOKEN_LP  shift, and go to state 90
    TOKEN_LB  shift, and go to state 91

    TOKEN_LP  [reduce using rule 38 (location)]
    $default  reduce using rule 38 (location)


State 62

   23 var_decl: type multi_id . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 92


State 63

   76 multi_id: id .
   77         | id . TOKEN_COMMA multi_id

    TOKEN_COMMA  shift, and go to state 93

    $default  reduce using rule 76 (multi_id)


State 64

   18 func_args: arg TOKEN_COMMA arg TOKEN_COMMA arg .
   19          | arg TOKEN_COMMA arg TOKEN_COMMA arg . TOKEN_COMMA arg

    TOKEN_COMMA  shift, and go to state 94

    $default  reduce using rule 18 (func_args)


State 65

    8 multi_field: TOKEN_LB int_literal TOKEN_RB TOKEN_COMMA id multi_field .

    $default  reduce using rule 8 (multi_field)


State 66

   27 statement: TOKEN_IFCONDITION TOKEN_RP . expr TOKEN_LP else_stmt

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 95
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 67

   28 statement: TOKEN_LOOP id . TOKEN_ASSIGNOP_ASS expr TOKEN_COMMA expr block

    TOKEN_ASSIGNOP_ASS  shift, and go to state 96


State 68

   61 expr: TOKEN_LP . expr TOKEN_RP

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 97
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 69

   59 expr: TOKEN_ARITHMATICOP_SUB . expr

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 98
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 70

   60 expr: TOKEN_LOGICOP . expr

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 99
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 71

   86 bool_literal: TOKEN_BOOLEANCONST .

    $default  reduce using rule 86 (bool_literal)


State 72

   87 char_literal: TOKEN_CHARCONST .

    $default  reduce using rule 87 (char_literal)


State 73

   29 statement: TOKEN_RETURN ret_stmt . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 100


State 74

   43 expr: location .

    $default  reduce using rule 43 (expr)


State 75

   34 ret_stmt: expr .
   46 expr: expr . TOKEN_ARITHMATICOP_ADD expr
   47     | expr . TOKEN_ARITHMATICOP_SUB expr
   48     | expr . TOKEN_ARITHMATICOP_MUL expr
   49     | expr . TOKEN_ARITHMATICOP_DIV expr
   50     | expr . TOKEN_ARITHMATICOP_REM expr
   51     | expr . TOKEN_RELATIONOP_SE expr
   52     | expr . TOKEN_RELATIONOP_S expr
   53     | expr . TOKEN_RELATIONOP_B expr
   54     | expr . TOKEN_RELATIONOP_BE expr
   55     | expr . TOKEN_EQUALITYOP_E expr
   56     | expr . TOKEN_EQUALITYOP_NE expr
   57     | expr . TOKEN_CONDITIONOP_AND expr
   58     | expr . TOKEN_CONDITIONOP_OR expr

    TOKEN_ARITHMATICOP_ADD  shift, and go to state 101
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 102
    TOKEN_ARITHMATICOP_DIV  shift, and go to state 103
    TOKEN_ARITHMATICOP_MUL  shift, and go to state 104
    TOKEN_ARITHMATICOP_REM  shift, and go to state 105
    TOKEN_RELATIONOP_SE     shift, and go to state 106
    TOKEN_RELATIONOP_S      shift, and go to state 107
    TOKEN_RELATIONOP_BE     shift, and go to state 108
    TOKEN_RELATIONOP_B      shift, and go to state 109
    TOKEN_EQUALITYOP_E      shift, and go to state 110
    TOKEN_EQUALITYOP_NE     shift, and go to state 111
    TOKEN_CONDITIONOP_AND   shift, and go to state 112
    TOKEN_CONDITIONOP_OR    shift, and go to state 113

    $default  reduce using rule 34 (ret_stmt)


State 76

   44 expr: method_call .

    $default  reduce using rule 44 (expr)


State 77

   45 expr: literal .

    $default  reduce using rule 45 (expr)


State 78

   78 literal: int_literal .

    $default  reduce using rule 78 (literal)


State 79

   80 literal: bool_literal .

    $default  reduce using rule 80 (literal)


State 80

   79 literal: char_literal .

    $default  reduce using rule 79 (literal)


State 81

   30 statement: TOKEN_BREAKSTMT TOKEN_SEMICOLON .

    $default  reduce using rule 30 (statement)


State 82

   31 statement: TOKEN_CONTINUESTMT TOKEN_SEMICOLON .

    $default  reduce using rule 31 (statement)


State 83

   63 method_call: TOKEN_CALLOUT TOKEN_LP . string_literal multi_callout_args TOKEN_RP

    TOKEN_STRINGCONST  shift, and go to state 114

    string_literal  go to state 115


State 84

   22 block: TOKEN_LCB var_decl statement TOKEN_RCB .

    $default  reduce using rule 22 (block)


State 85

   40 assign_op: TOKEN_ASSIGNOP_ASS .

    $default  reduce using rule 40 (assign_op)


State 86

   41 assign_op: TOKEN_ASSIGNOP_ADD .

    $default  reduce using rule 41 (assign_op)


State 87

   42 assign_op: TOKEN_ASSIGNOP_SUB .

    $default  reduce using rule 42 (assign_op)


State 88

   25 statement: location assign_op . expr TOKEN_SEMICOLON

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 116
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 89

   26 statement: method_call TOKEN_SEMICOLON .

    $default  reduce using rule 26 (statement)


State 90

   62 method_call: id TOKEN_LP . multi_expr TOKEN_RP

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    $default  reduce using rule 65 (multi_expr)

    location          go to state 74
    expr              go to state 117
    method_call       go to state 76
    multi_expr        go to state 118
    multi_expr_inner  go to state 119
    literal           go to state 77
    int_literal       go to state 78
    id                go to state 61
    decimal_literal   go to state 35
    hex_literal       go to state 36
    bool_literal      go to state 79
    char_literal      go to state 80


State 91

   39 location: id TOKEN_LB . expr TOKEN_RB

    TOKEN_ID                shift, and go to state 19
    TOKEN_LP                shift, and go to state 68
    TOKEN_CALLOUT           shift, and go to state 56
    TOKEN_ARITHMATICOP_SUB  shift, and go to state 69
    TOKEN_LOGICOP           shift, and go to state 70
    TOKEN_DECIMALCONST      shift, and go to state 32
    TOKEN_HEXADECIMALCONST  shift, and go to state 33
    TOKEN_BOOLEANCONST      shift, and go to state 71
    TOKEN_CHARCONST         shift, and go to state 72

    location         go to state 74
    expr             go to state 120
    method_call      go to state 76
    literal          go to state 77
    int_literal      go to state 78
    id               go to state 61
    decimal_literal  go to state 35
    hex_literal      go to state 36
    bool_literal     go to state 79
    char_literal     go to state 80


State 92

   23 var_decl: type multi_id TOKEN_SEMICOLON .

    $default  reduce using rule 23 (var_decl)


State 93

   77 multi_id: id TOKEN_COMMA . multi_id

    TOKEN_ID  shift, and go to state 19

    multi_id  go to state 121
    id        go to state 63


State 94

   19 func_args: arg TOKEN_COMMA arg TOKEN_COMMA arg TOKEN_COMMA . arg

    TOKEN_INTTYPE      shift, and go to state 6
    TOKEN_BOOLEANTYPE  shift, and go to state 7
